Wrap footer <span>s to avoid overlapping code.

--- a/regenerator/sandbox.css
+++ b/regenerator/sandbox.css
@@ -58,6 +58,7 @@ h1, h2 {
   position: fixed;
   bottom: 25px;
   background: white;
+  max-width: 250px;
 }
 
 #attribution {
